--- a/index.html
+++ b/index.html
@@ -1,80 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="Lightweight progressive web app for scanning QR codes offline">
+    <meta name="keywords" content="qrcode, scanner, scan, offline, progressive, web, app, pwa, free, lightweight, light">
+    <meta name="author" content="Louis Lagrange">
     <title>QR Code Scanner</title>
-    <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <meta name=description content="QR Code Scanner is the fastest and most user-friendly web application.">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="QR Scanner" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#e4e4e4">
+
+    <link rel="manifest" href="manifest.json">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="assets/images/icons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/icons/favicon-16x16.png" sizes="16x16">
+    <link rel="mask-icon" href="assets/images/icons/safari-pinned-tab.svg" color="#3f51b5">
+    <link rel="shortcut icon" href="assets/images/icons/favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="QR Scanner" />
-    <meta name="msapplication-TileColor" content="#e4e4e4" />
-    <meta name="msapplication-TileImage" content="/images/touch/mstile-150x150.png" />
-    <meta name="theme-color" content="#fff" />
-    <link rel="apple-touch-icon" href="/images/touch/apple-touch-icon.jpg" />
-    <link rel="icon" type="image/png" href="/images/touch/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="/images/touch/favicon-16x16.png" sizes="16x16" />
-    <link rel="shortcut icon" href="/images/touch/favicon.ico">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="preload" as="script" href="decoder.js">
-  </head>
-  <body>
-    <div class="app__layout">
-      <!-- Header -->
-      <header class="app__header">
-        <span class="app__header-icon" onclick="window.open('https://github.com/code-kotis/barcode-scanner', '_blank', 'toolbar=0,location=0,menubar=0');">
-          <svg fill="#FFFFFF" height="27" viewBox="0 0 24 24" width="27" xmlns="http://www.w3.org/2000/svg">
-            <path d="M0 0h24v24H0z" fill="none" />
-            <path d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z" />
-          </svg>
-        </span>
-      </header>
+    <meta name="apple-mobile-web-app-title" content="QR Code Scanner">
+    <meta name="application-name" content="QR Code Scanner">
+    <meta name="msapplication-config" content="assets/images/icons/browserconfig.xml">
+    <meta name="theme-color" content="#3f51b5">
 
-      <main class="app__layout-content">
-        <video autoplay></video>
+    <meta property="og:title" content="QR Code Scanner" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://minishlink.github.io/pwa-qr-code-scanner" />
+    <meta property="og:image" content="https://minishlink.github.io/pwa-qr-code-scanner/assets/images/icons/android-chrome-256x256.png" />
+    <meta property="og:description" content="Lightweight progressive web app for scanning QR codes offline" />
 
-        <!-- Dialog  -->
-        <div class="app__dialog app__dialog--hide">
-          <div class="app__dialog-content">
-            <h5>QR Code</h5>
-            <input type="text" id="result">
-          </div>
-          <div class="app__dialog-actions">
-            <button type="button" class="app__dialog-open">Open</button>
-            <button type="button" class="app__dialog-close">Close</button>
-          </div>
-        </div>
-
-        <div class="app__dialog-overlay app__dialog--hide"></div>
-
-        <!-- Snackbar -->
-        <div class="app__snackbar"></div>
-      </main>
-    </div>
-    <div class="app__overlay">
-      <div class="app__overlay-frame"></div>
-      <!-- Scanner animation -->
-      <div class="custom-scanner"></div>
-      <div class="app__help-text"></div>
-    </div>
-
-    <div class="app__select-photos"></div>
-
-    <script>
-      if (location.hostname !== "localhost") {
-        (function (i, s, o, g, r, a, m) {
-          i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-          }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'pageview');
-      }
+    <script type="text/javascript">
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js');
+        }
     </script>
-    <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js" integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
-      crossorigin="anonymous"></script>
-  </body>
+
+    <link rel="stylesheet" type="text/css" href="assets/lib/dialog-polyfill/dialog-polyfill.css" />
+    <link rel="stylesheet" href="assets/lib/material-design-lite/material.min.css">
+    <link rel="stylesheet" href="assets/style.css">
+
+    <script src="assets/lib/dialog-polyfill/dialog-polyfill.js"></script>
+    <script src="assets/lib/material-design-lite/material.min.js"></script>
+    <script src="assets/lib/clipboard/dist/clipboard.min.js"></script>
+    <script src="assets/app.js"></script>
+</head>
+<body>
+    <div id="loading" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
+
+    <video id="camera" autoplay>You need a camera in order to use this app.</video>
+    <div id="snapshotLimitOverlay">
+        <div id="about">
+            <h4>QR Code Scanner</h4>
+            <p>
+                This is a lightweight progressive web app for scanning QR Codes offline.<br />
+                You'll need at least a camera and a compatible browser.<br />
+                Source code is available on GitHub (Minishlink/pwa-qr-code-scanner), click the <strong>About</strong> button.
+            </p>
+        </div>
+    </div>
+    <canvas id="snapshot"></canvas>
+    <button id="flipCamera" type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Flip Camera</button>
+    <a id="aboutButton" type="button" href="https://github.com/Minishlink/pwa-qr-code-scanner" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">About</a>
+
+    <dialog class="mdl-dialog">
+        <h4 class="mdl-dialog__title">Your text</h4>
+        <div class="mdl-dialog__content">
+            <p id="resultsContainer"><span id="result"></span></p>
+            <p>
+                <button type="button" class="copy mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised" data-clipboard-target="#result">Copy</button>
+                <a class="search mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Search</a>
+            </p>
+        </div>
+        <div class="mdl-dialog__actions">
+            <button type="button" class="continue mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--colored">Continue</button>
+        </div>
+    </dialog>
+</body>
 </html>
